--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0-next.0",
     "@angular/router": "~13.0.0-next.0",
     "rxjs": "~7.4.0",
+    "speak-tts": "^2.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -28,12 +29,15 @@
     "@angular/compiler-cli": "~13.0.0-next.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.13",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^2.2.19",
     "typescript": "~4.4.3"
   }
 }
